Closed Bug 1387912 Opened 8 years ago Closed 8 years ago

nightly 20170804 compile failed - error: ‘gfxAlphaType’ does not name a type

Categories

(Core :: Graphics, defect)

57 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: u532768, Assigned: jfkthame)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0 Build ID: 20170725113151 Steps to reproduce: Updated hg repository to latest nightly version, compiled, got the error. This is on an up to date Fedora 25. Actual results: 20:05.42 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/bindings/OffscreenCanvasBinding.cpp:9:0, 20:05.42 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/bindings/UnifiedBindings12.cpp:50: 20:05.42 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ImageBitmap.h:66:3: error: ‘gfxAlphaType’ does not name a type 20:05.42 gfxAlphaType mAlphaType; 20:05.42 ^~~~~~~~~~~~ 20:05.42 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ImageBitmap.h:203:15: error: ‘gfxAlphaType’ has not been declared 20:05.42 gfxAlphaType aAlphaType = gfxAlphaType::Premult); 20:05.42 ^~~~~~~~~~~~ 20:05.42 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ImageBitmap.h:275:9: error: ‘gfxAlphaType’ does not name a type 20:05.42 const gfxAlphaType mAlphaType; 20:05.42 ^~~~~~~~~~~~ 20:05.42 /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ImageBitmap.h:203:41: error: ‘gfxAlphaType’ has not been declared 20:05.42 gfxAlphaType aAlphaType = gfxAlphaType::Premult); 20:05.42 ^~~~~~~~~~~~ 20:05.42 /mnt/to_archive/accum/src/mozilla-central/config/rules.mk:1050: recipe for target 'UnifiedBindings12.o' failed 20:05.42 gmake[5]: *** [UnifiedBindings12.o] Error 1 20:05.42 /mnt/to_archive/accum/src/mozilla-central/config/recurse.mk:73: recipe for target 'dom/bindings/target' failed 20:05.42 gmake[4]: *** [dom/bindings/target] Error 2 20:05.42 gmake[4]: *** Waiting for unfinished jobs.... Expected results: successful compile
Component: Untriaged → Graphics
Product: Firefox → Core
If you add #include "gfxTypes.h" to the includes at the start of dom/canvas/ImageBitmap.h, does that resolve the problem?
Flags: needinfo?(stanl-mozilla)
Yes, that worked.
Flags: needinfo?(stanl-mozilla)
Assignee: nobody → jfkthame
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8894558 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/22734f3d4b603253f6e9ba1b4ff9bd36e4a73712 Bug 1387912 - Add missing #include to dom/canvas/ImageBitmap.h, to avoid build fragility (unified-compilation dependency. r=jrmuizel
Pushed by archaeopteryx@coole-files.de: https://hg.mozilla.org/mozilla-central/rev/65826179c86e Add missing #include to dom/canvas/ImageBitmap.h, to avoid build fragility (unified-compilation dependency. r=jrmuizel a=stability
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Yes, nightly compiles fine with this fix. Thanks.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: