Bug 1387912 - Add missing #include to dom/canvas/ImageBitmap.h, to avoid build fragility (unified-compilation dependency. r=jrmuizel